v0.0.1/modules/schema/pages/class/Supercritical.adoc
= `Supercritical`
:toclevels: 4


+++Once-through supercritical boiler.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Supercritical`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
*** xref::class/SteamSupply.adoc[`SteamSupply`]
**** xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]
***** *`Supercritical`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
Supercritical {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}





















SteamTurbine {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Control {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Measurement {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PSRType {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ConfigurationEvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ReportingGroup {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



OperatingShare {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



AssetInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



VerificationAction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ClearanceDocument {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



GenericAction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



PSREvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Asset {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Location {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OperationalTag {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}













Supercritical -> SteamTurbine: SteamTurbines


Supercritical -> Control: Controls


Supercritical -> Measurement: Measurements


Supercritical -> PSRType: PSRType


Supercritical -> ConfigurationEvent: ConfigurationEvent


Supercritical -> ReportingGroup: ReportingGroup


Supercritical -> OperatingShare: OperatingShare


Supercritical -> AssetInfo: AssetDatasheet


Supercritical -> VerificationAction: VerificationAction


Supercritical -> ClearanceDocument: Clearances


Supercritical -> GenericAction: GenericAction


Supercritical -> PSREvent: PSREvents


Supercritical -> Asset: Assets


Supercritical -> Location: Location


Supercritical -> OperationalTag: OperationalTags


Supercritical -> DiagramObject: DiagramObjects


Supercritical -> InstanceSet: InstanceSet


Supercritical -> Name: Names


Supercritical -> ChangeSetMember: PropertiesCIMDataObject


Supercritical -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<AssetDatasheet,`AssetDatasheet`>>
| 0..1
| xref::class/AssetInfo.adoc[`AssetInfo`]
| +++Datasheet information for this power system resource.+++

| <<Location,`Location`>>
| 0..1
| xref::class/Location.adoc[`Location`]
| +++Location of this power system resource.+++

| <<PSRType,`PSRType`>>
| 0..1
| xref::class/PSRType.adoc[`PSRType`]
| +++Custom classification for this power system resource.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<auxPowerVersusFrequency,`auxPowerVersusFrequency`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Off nominal frequency effect on auxiliary real power. Per unit active power variation versus per unit frequency variation.+++

| <<auxPowerVersusVoltage,`auxPowerVersusVoltage`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Off nominal voltage effect on auxiliary real power. Per unit active power variation versus per unit voltage variation.+++

| <<boilerControlMode,`boilerControlMode`>>
| 0..1
| xref::enumeration/BoilerControlMode.adoc[`BoilerControlMode`]
| +++The control mode of the boiler.+++

| <<controlErrorBiasP,`controlErrorBiasP`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Active power error bias ratio.+++

| <<controlIC,`controlIC`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Integral constant.+++

| <<controlPC,`controlPC`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Proportional constant.+++

| <<controlPEB,`controlPEB`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Pressure error bias ratio.+++

| <<controlPED,`controlPED`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Pressure error deadband.+++

| <<controlTC,`controlTC`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Time constant.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<feedWaterIG,`feedWaterIG`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Feedwater integral gain ratio.+++

| <<feedWaterPG,`feedWaterPG`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Feedwater proportional gain ratio.+++

| <<feedWaterTC,`feedWaterTC`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Feedwater time constant ratio.+++

| <<fuelDemandLimit,`fuelDemandLimit`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Fuel demand limit.+++

| <<fuelSupplyDelay,`fuelSupplyDelay`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Fuel delay.+++

| <<fuelSupplyTC,`fuelSupplyTC`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Fuel supply time constant.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<maxErrorRateP,`maxErrorRateP`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Active power maximum error rate limit.+++

| <<mechPowerSensorLag,`mechPowerSensorLag`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Mechanical power sensor lag.+++

| <<minErrorRateP,`minErrorRateP`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Active power minimum error rate limit.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<pressureCtrlDG,`pressureCtrlDG`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Pressure control derivative gain ratio.+++

| <<pressureCtrlIG,`pressureCtrlIG`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Pressure control integral gain ratio.+++

| <<pressureCtrlPG,`pressureCtrlPG`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Pressure control proportional gain ratio.+++

| <<pressureFeedback,`pressureFeedback`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Pressure feedback indicator.+++

| <<steamSupplyRating,`steamSupplyRating`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Rating of steam supply.+++

| <<superHeater1Capacity,`superHeater1Capacity`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Drum/primary superheater capacity.+++

| <<superHeater2Capacity,`superHeater2Capacity`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Secondary superheater capacity.+++

| <<superHeaterPipePD,`superHeaterPipePD`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Superheater pipe pressure drop constant.+++

| <<throttlePressureSP,`throttlePressureSP`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Throttle pressure setpoint.+++

| <<Assets,`Assets`>>
| 0..*
| xref::class/Asset.adoc[`Asset`]
| +++All assets represented by this power system resource. For example, multiple conductor assets are electrically modelled as a single AC line segment.+++

| <<Clearances,`Clearances`>>
| 0..*
| xref::class/ClearanceDocument.adoc[`ClearanceDocument`]
| +++All clearances applicable to this power system resource.+++

| <<ConfigurationEvent,`ConfigurationEvent`>>
| 0..*
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this Power System resource.+++

| <<Controls,`Controls`>>
| 0..*
| xref::class/Control.adoc[`Control`]
| +++The controller outputs used to actually govern a regulating device, e.g. the magnetization of a synchronous machine or capacitor bank breaker actuator.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<GenericAction,`GenericAction`>>
| 0..*
| xref::class/GenericAction.adoc[`GenericAction`]
| +++The generic action that is performed on the power system resource+++

| <<Measurements,`Measurements`>>
| 0..*
| xref::class/Measurement.adoc[`Measurement`]
| +++The measurements associated with this power system resource.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<OperatingShare,`OperatingShare`>>
| 0..*
| xref::class/OperatingShare.adoc[`OperatingShare`]
| +++The operating shares of this power system resource.+++

| <<OperationalTags,`OperationalTags`>>
| 0..*
| xref::class/OperationalTag.adoc[`OperationalTag`]
| +++All operational tags placed on this power system resource.+++

| <<PSREvents,`PSREvents`>>
| 0..*
| xref::class/PSREvent.adoc[`PSREvent`]
| +++All events associated with this power system resource.+++

| <<ReportingGroup,`ReportingGroup`>>
| 0..*
| xref::class/ReportingGroup.adoc[`ReportingGroup`]
| +++Reporting groups to which this power system resource belongs.+++

| <<SteamTurbines,`SteamTurbines`>>
| 0..*
| xref::class/SteamTurbine.adoc[`SteamTurbine`]
| +++Steam turbines may have steam supplied by a steam supply.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++

| <<VerificationAction,`VerificationAction`>>
| 0..*
| xref::class/VerificationAction.adoc[`VerificationAction`]
| +++The verification action that is performed on the power system resource+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#AssetDatasheet]
=== `AssetDatasheet`
+++Datasheet information for this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.AssetDatasheet`
| Cardinality
| 0..1
| Type
| xref::class/AssetInfo.adoc[`AssetInfo`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#Assets]
=== `Assets`
+++All assets represented by this power system resource. For example, multiple conductor assets are electrically modelled as a single AC line segment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#auxPowerVersusFrequency]
=== `auxPowerVersusFrequency`
+++Off nominal frequency effect on auxiliary real power. Per unit active power variation versus per unit frequency variation.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.auxPowerVersusFrequency`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#auxPowerVersusVoltage]
=== `auxPowerVersusVoltage`
+++Off nominal voltage effect on auxiliary real power. Per unit active power variation versus per unit voltage variation.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.auxPowerVersusVoltage`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#boilerControlMode]
=== `boilerControlMode`
+++The control mode of the boiler.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.boilerControlMode`
| Cardinality
| 0..1
| Type
| xref::enumeration/BoilerControlMode.adoc[`BoilerControlMode`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#Clearances]
=== `Clearances`
+++All clearances applicable to this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Clearances`
| Cardinality
| 0..*
| Type
| xref::class/ClearanceDocument.adoc[`ClearanceDocument`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#ConfigurationEvent]
=== `ConfigurationEvent`
+++All configuration events created for this Power System resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.ConfigurationEvent`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#controlErrorBiasP]
=== `controlErrorBiasP`
+++Active power error bias ratio.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.controlErrorBiasP`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#controlIC]
=== `controlIC`
+++Integral constant.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.controlIC`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#controlPC]
=== `controlPC`
+++Proportional constant.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.controlPC`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#controlPEB]
=== `controlPEB`
+++Pressure error bias ratio.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.controlPEB`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#controlPED]
=== `controlPED`
+++Pressure error deadband.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.controlPED`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#Controls]
=== `Controls`
+++The controller outputs used to actually govern a regulating device, e.g. the magnetization of a synchronous machine or capacitor bank breaker actuator.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Controls`
| Cardinality
| 0..*
| Type
| xref::class/Control.adoc[`Control`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#controlTC]
=== `controlTC`
+++Time constant.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.controlTC`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#feedWaterIG]
=== `feedWaterIG`
+++Feedwater integral gain ratio.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.feedWaterIG`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#feedWaterPG]
=== `feedWaterPG`
+++Feedwater proportional gain ratio.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.feedWaterPG`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#feedWaterTC]
=== `feedWaterTC`
+++Feedwater time constant ratio.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.feedWaterTC`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#fuelDemandLimit]
=== `fuelDemandLimit`
+++Fuel demand limit.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.fuelDemandLimit`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#fuelSupplyDelay]
=== `fuelSupplyDelay`
+++Fuel delay.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.fuelSupplyDelay`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#fuelSupplyTC]
=== `fuelSupplyTC`
+++Fuel supply time constant.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.fuelSupplyTC`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#GenericAction]
=== `GenericAction`
+++The generic action that is performed on the power system resource+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.GenericAction`
| Cardinality
| 0..*
| Type
| xref::class/GenericAction.adoc[`GenericAction`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Location]
=== `Location`
+++Location of this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Location`
| Cardinality
| 0..1
| Type
| xref::class/Location.adoc[`Location`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#maxErrorRateP]
=== `maxErrorRateP`
+++Active power maximum error rate limit.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.maxErrorRateP`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#Measurements]
=== `Measurements`
+++The measurements associated with this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Measurements`
| Cardinality
| 0..*
| Type
| xref::class/Measurement.adoc[`Measurement`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#mechPowerSensorLag]
=== `mechPowerSensorLag`
+++Mechanical power sensor lag.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.mechPowerSensorLag`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#minErrorRateP]
=== `minErrorRateP`
+++Active power minimum error rate limit.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.minErrorRateP`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#OperatingShare]
=== `OperatingShare`
+++The operating shares of this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.OperatingShare`
| Cardinality
| 0..*
| Type
| xref::class/OperatingShare.adoc[`OperatingShare`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#OperationalTags]
=== `OperationalTags`
+++All operational tags placed on this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.OperationalTags`
| Cardinality
| 0..*
| Type
| xref::class/OperationalTag.adoc[`OperationalTag`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#pressureCtrlDG]
=== `pressureCtrlDG`
+++Pressure control derivative gain ratio.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.pressureCtrlDG`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#pressureCtrlIG]
=== `pressureCtrlIG`
+++Pressure control integral gain ratio.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.pressureCtrlIG`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#pressureCtrlPG]
=== `pressureCtrlPG`
+++Pressure control proportional gain ratio.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.pressureCtrlPG`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#pressureFeedback]
=== `pressureFeedback`
+++Pressure feedback indicator.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.pressureFeedback`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PSREvents]
=== `PSREvents`
+++All events associated with this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.PSREvents`
| Cardinality
| 0..*
| Type
| xref::class/PSREvent.adoc[`PSREvent`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#PSRType]
=== `PSRType`
+++Custom classification for this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.PSRType`
| Cardinality
| 0..1
| Type
| xref::class/PSRType.adoc[`PSRType`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#ReportingGroup]
=== `ReportingGroup`
+++Reporting groups to which this power system resource belongs.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.ReportingGroup`
| Cardinality
| 0..*
| Type
| xref::class/ReportingGroup.adoc[`ReportingGroup`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#steamSupplyRating]
=== `steamSupplyRating`
+++Rating of steam supply.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SteamSupply.steamSupplyRating`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/SteamSupply.adoc[`SteamSupply`]


|===

//[discrete]
[#SteamTurbines]
=== `SteamTurbines`
+++Steam turbines may have steam supplied by a steam supply.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SteamSupply.SteamTurbines`
| Cardinality
| 0..*
| Type
| xref::class/SteamTurbine.adoc[`SteamTurbine`]

| Inherited from
| xref::class/SteamSupply.adoc[`SteamSupply`]


|===

//[discrete]
[#superHeater1Capacity]
=== `superHeater1Capacity`
+++Drum/primary superheater capacity.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.superHeater1Capacity`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#superHeater2Capacity]
=== `superHeater2Capacity`
+++Secondary superheater capacity.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.superHeater2Capacity`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#superHeaterPipePD]
=== `superHeaterPipePD`
+++Superheater pipe pressure drop constant.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.superHeaterPipePD`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#throttlePressureSP]
=== `throttlePressureSP`
+++Throttle pressure setpoint.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FossilSteamSupply.throttlePressureSP`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]

| Inherited from
| xref::class/FossilSteamSupply.adoc[`FossilSteamSupply`]


|===

//[discrete]
[#VerificationAction]
=== `VerificationAction`
+++The verification action that is performed on the power system resource+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.VerificationAction`
| Cardinality
| 0..*
| Type
| xref::class/VerificationAction.adoc[`VerificationAction`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===


